tests/errors/assign-check/missing-large.fil
comp main<@G: 1>() -> () {
    bundle a[100]: for<k> [@G, @G+1] 32;
    a{0} = a{1};
}